sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: ':' expected but identifier found.
def bubbleSort(int T[])  
                   ^AlgBubbleSort1:23: error: identifier expected but '}' found.
}
^