sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(int T[])  
{
	var i : int=0;
	var echEffectue : int=1;
	while (echEffectue == 1)
	{
		echEffectue = 0;
		while (i!=getNombreValeurs())
		{
		  if (plusPetit(i+1,i))
		  {
		  	echange(i+1,i);
		  	echEffectue = 1;
		  }
		  i = i+1;
		}
	}
}
